[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/actors/gatito/pata.tres" type="Texture" id=1]
[ext_resource path="res://src/player/Pata.gd" type="Script" id=2]
[ext_resource path="res://assets/audios/cheers.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audios/gameover.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 56 )

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[node name="Pata" type="KinematicBody2D"]
position = Vector2( 0, 24 )
collision_mask = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PataSprite" type="Sprite" parent="."]
position = Vector2( 0, 640 )
scale = Vector2( 0.8, 1 )
texture = ExtResource( 1 )

[node name="PataCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="CatchArea" type="Area2D" parent="."]
position = Vector2( 0, -24 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Position2D" type="Position2D" parent="CatchArea"]

[node name="CatchCollisionShape2D" type="CollisionShape2D" parent="CatchArea"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -112 )
scale = Vector2( 3.2, 0.9 )

[node name="AudioWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="AudioLose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="tree_exited" from="." to="." method="_on_Pata_tree_exited"]
[connection signal="body_entered" from="CatchArea" to="." method="_on_CatchArea_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
